test/stg/error/pap2.stg
-- explicit PAPs not supported
main = THUNK(let { eqOne = PAP(eqInt one);
                   output = THUNK(one); 
                   result = THUNK(eqOne output)} in result); 
